clusters/constellation/apps/spuxx-dev/toledo/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: toledo-staging
  namespace: spuxx-dev
  labels:
    monitoringGroup: toledo
spec:
  selector:
    app: toledo-staging
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
