clusters/constellation/apps/spuxx-dev/toledo/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toledo-staging
  namespace: spuxx-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffers-size: "16k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 16k"
spec:
  tls:
  - hosts:
    - "*.spuxx.dev"
    secretName: spuxx.dev
  rules:
  - host: toledo-staging.spuxx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: toledo-staging
            port:
              name: http
